pyqt5-sip: update to 12.17.0

--- a/mingw-w64-pyqt5-sip/PKGBUILD
+++ b/mingw-w64-pyqt5-sip/PKGBUILD
@@ -3,15 +3,11 @@
 _realname=pyqt5-sip
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python-sip"
-           "${MINGW_PACKAGE_PREFIX}-python-sip4")
-replaces=("${MINGW_PACKAGE_PREFIX}-python-sip"
-          "${MINGW_PACKAGE_PREFIX}-python-sip4")
-pkgver=12.16.1
+pkgver=12.17.0
 pkgrel=1
 pkgdesc="The sip extension module provides support for the PyQt5 package (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/Python-SIP/sip"
 msys2_references=(
   'archlinux: python-pyqt5-sip'
@@ -24,7 +20,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
 source=(https://pypi.python.org/packages/source/P/PyQt5_sip/pyqt5_sip-${pkgver}.tar.gz)
-sha256sums=('8c831f8b619811a32369d72339faa50ae53a963f5fdfa4d71f845c63e9673125')
+sha256sums=('682dadcdbd2239af9fdc0c0628e2776b820e128bec88b49b8d692fe682f90b4f')
 
 prepare() {
   cd "${srcdir}"
