--- a/mingw-w64-pyqt5/PKGBUILD
+++ b/mingw-w64-pyqt5/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=5.15.11
 pkgrel=3
 pkgdesc="Qt5 bindings for Python (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://riverbankcomputing.com/software/pyqt"
 msys2_references=(
   'archlinux: pyqt5'
@@ -21,21 +21,19 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-qt5-declarative"
             "${MINGW_PACKAGE_PREFIX}-qt5-multimedia"
             "${MINGW_PACKAGE_PREFIX}-qt5-svg"
             "${MINGW_PACKAGE_PREFIX}-qt5-tools"
-            "${MINGW_PACKAGE_PREFIX}-qtwebkit")
-if [[ ${CARCH} != i686 ]]; then
-  optdepends+=("${MINGW_PACKAGE_PREFIX}-qt5-activeqt"
-               "${MINGW_PACKAGE_PREFIX}-qt5-connectivity"
-               "${MINGW_PACKAGE_PREFIX}-qt5-location"
-               "${MINGW_PACKAGE_PREFIX}-qt5-quick3d"
-               "${MINGW_PACKAGE_PREFIX}-qt5-remoteobjects"
-               "${MINGW_PACKAGE_PREFIX}-qt5-sensors"
-               "${MINGW_PACKAGE_PREFIX}-qt5-serialport"
-               "${MINGW_PACKAGE_PREFIX}-qt5-speech"
-               "${MINGW_PACKAGE_PREFIX}-qt5-webchannel"
-               "${MINGW_PACKAGE_PREFIX}-qt5-websockets"
-               "${MINGW_PACKAGE_PREFIX}-qt5-winextras"
-               "${MINGW_PACKAGE_PREFIX}-qt5-xmlpatterns")
-fi
+            "${MINGW_PACKAGE_PREFIX}-qtwebkit"
+            "${MINGW_PACKAGE_PREFIX}-qt5-activeqt"
+            "${MINGW_PACKAGE_PREFIX}-qt5-connectivity"
+            "${MINGW_PACKAGE_PREFIX}-qt5-location"
+            "${MINGW_PACKAGE_PREFIX}-qt5-quick3d"
+            "${MINGW_PACKAGE_PREFIX}-qt5-remoteobjects"
+            "${MINGW_PACKAGE_PREFIX}-qt5-sensors"
+            "${MINGW_PACKAGE_PREFIX}-qt5-serialport"
+            "${MINGW_PACKAGE_PREFIX}-qt5-speech"
+            "${MINGW_PACKAGE_PREFIX}-qt5-webchannel"
+            "${MINGW_PACKAGE_PREFIX}-qt5-websockets"
+            "${MINGW_PACKAGE_PREFIX}-qt5-winextras"
+            "${MINGW_PACKAGE_PREFIX}-qt5-xmlpatterns")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-sip"
              "${MINGW_PACKAGE_PREFIX}-pyqt-builder"
@@ -43,19 +41,18 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt5-multimedia"
              "${MINGW_PACKAGE_PREFIX}-qt5-svg"
              "${MINGW_PACKAGE_PREFIX}-qt5-tools"
-             $([[ ${CARCH} == i686 ]] || echo \
-               "${MINGW_PACKAGE_PREFIX}-qt5-activeqt" \
-               "${MINGW_PACKAGE_PREFIX}-qt5-connectivity" \
-               "${MINGW_PACKAGE_PREFIX}-qt5-location" \
-               "${MINGW_PACKAGE_PREFIX}-qt5-quick3d" \
-               "${MINGW_PACKAGE_PREFIX}-qt5-remoteobjects" \
-               "${MINGW_PACKAGE_PREFIX}-qt5-sensors" \
-               "${MINGW_PACKAGE_PREFIX}-qt5-serialport" \
-               "${MINGW_PACKAGE_PREFIX}-qt5-speech" \
-               "${MINGW_PACKAGE_PREFIX}-qt5-webchannel" \
-               "${MINGW_PACKAGE_PREFIX}-qt5-websockets" \
-               "${MINGW_PACKAGE_PREFIX}-qt5-winextras" \
-               "${MINGW_PACKAGE_PREFIX}-qt5-xmlpatterns")
+             "${MINGW_PACKAGE_PREFIX}-qt5-activeqt"
+             "${MINGW_PACKAGE_PREFIX}-qt5-connectivity"
+             "${MINGW_PACKAGE_PREFIX}-qt5-location"
+             "${MINGW_PACKAGE_PREFIX}-qt5-quick3d"
+             "${MINGW_PACKAGE_PREFIX}-qt5-remoteobjects"
+             "${MINGW_PACKAGE_PREFIX}-qt5-sensors"
+             "${MINGW_PACKAGE_PREFIX}-qt5-serialport"
+             "${MINGW_PACKAGE_PREFIX}-qt5-speech"
+             "${MINGW_PACKAGE_PREFIX}-qt5-webchannel"
+             "${MINGW_PACKAGE_PREFIX}-qt5-websockets"
+             "${MINGW_PACKAGE_PREFIX}-qt5-winextras"
+             "${MINGW_PACKAGE_PREFIX}-qt5-xmlpatterns"
              $([[ ${MINGW_PACKAGE_PREFIX} == *-clang-aarch64* ]] || echo "${MINGW_PACKAGE_PREFIX}-qtwebkit"))
 source=(https://pypi.python.org/packages/source/P/PyQt5/PyQt5-${pkgver}.tar.gz)
 sha256sums=('fda45743ebb4a27b4b1a51c6d8ef455c4c1b5d610c90d2934c7802b5c1557c52')
