--- a/mingw-w64-qt5-multimedia/PKGBUILD
+++ b/mingw-w64-qt5-multimedia/PKGBUILD
@@ -3,12 +3,12 @@
 _realname=qt5-multimedia
 pkgbase="mingw-w64-${_realname}"
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
-         $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-${_realname}-debug"))
+         "${MINGW_PACKAGE_PREFIX}-${_realname}-debug")
 pkgver=5.15.16
 pkgrel=1
 pkgdesc="Classes for audio, video, radio and camera functionality (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.qt.io/'
 msys2_references=(
   "cpe: cpe:/a:qt:qt"
@@ -16,7 +16,7 @@ msys2_references=(
 license=('spdx:LGPL-3.0-only WITH Qt-GPL-exception-1.0 AND GPL-3.0-or-later AND GPL-2.0-or-later AND GFDL-1.3-no-invariants-only')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt5-declarative"
-             $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-angleproject")
+             "${MINGW_PACKAGE_PREFIX}-angleproject"
              "${MINGW_PACKAGE_PREFIX}-openal"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "rsync")
@@ -49,7 +49,7 @@ package_qt5-multimedia() {
   depends=("${MINGW_PACKAGE_PREFIX}-qt5-base"
            "${MINGW_PACKAGE_PREFIX}-openal")
   optdepends=("${MINGW_PACKAGE_PREFIX}-qt5-declarative")
-  groups=($([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-qt5"))
+  groups=("${MINGW_PACKAGE_PREFIX}-qt5")
 
   cd build-${MSYSTEM}
 
@@ -65,11 +65,9 @@ package_qt5-multimedia() {
   install -d "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
   install -Dm644 $srcdir/${_pkgfn/opensource-/}/LICENSE* -t "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
 
-  if [[ ${CARCH} != i686 ]]; then
   # Seperate debug-info files
   mv -f "${pkgdir}${MINGW_PREFIX}/lib"/*.debug "${pkgdir}${MINGW_PREFIX}/bin"/ || true
   rsync -armR --remove-source-files --include="*/" --include="*.debug" --exclude="*" --prune-empty-dirs "${pkgdir}"/.${MINGW_PREFIX} "${srcdir}"/${MSYSTEM}-debug/
-  fi
 
   # Fix paths in *.pri, *prl and *.pc files:
   #   $(cygpath -m ${MINGW_PREFIX}) -> $(cygpath -m "${pkgdir}"${MINGW_PREFIX})
