--- a/mingw-w64-qtwebkit/PKGBUILD
+++ b/mingw-w64-qtwebkit/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=${_pkgver//-/}
 pkgrel=21
 pkgdesc="Webkit module for Qt5 (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url="https://github.com/qtwebkit/qtwebkit/wiki"
 msys2_references=(
   'archlinux: qt5-webkit'
