update to ngspice 44.2

--- a/mingw-w64-ngspice/PKGBUILD
+++ b/mingw-w64-ngspice/PKGBUILD
@@ -4,7 +4,7 @@
 _realname=ngspice
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=42
+pkgver=44.2
 pkgrel=1
 pkgdesc="Mixed-level/Mixed-signal circuit simulator based on Spice3f5, Cider1b1, and Xspice (mingw-w64)"
 arch=('any')
@@ -24,6 +24,8 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-fftw"
   "${MINGW_PACKAGE_PREFIX}-gcc-libs"
   "${MINGW_PACKAGE_PREFIX}-omp"
+  "${MINGW_PACKAGE_PREFIX}-ncurses"
+  "${MINGW_PACKAGE_PREFIX}-readline"
 )
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cc"
@@ -32,16 +34,19 @@ makedepends=(
 install="${_realname}-${MSYSTEM}.install"
 source=(
   "https://downloads.sourceforge.net/project/${_realname}/ng-spice-rework/${pkgver}/${_realname}-${pkgver}.tar.gz"
-  "https://downloads.sourceforge.net/project/${_realname}/ng-spice-rework/${pkgver}/${_realname}-doc-${pkgver}.tar.gz"
+  "https://downloads.sourceforge.net/project/${_realname}/ng-spice-rework/${pkgver}/${_realname}-doc-${pkgver%%.*}.tar.gz"
   "no-explicit-lstdc++.patch"
+  "curses.patch"
 )
-sha256sums=('737fe3846ab2333a250dfadf1ed6ebe1860af1d8a5ff5e7803c772cc4256e50a'
-            'bb971b1553d2ab19a9188f00fa14eb84b24bff6d1fbe0a7e16ffa1147ce6a9a4'
-            '57f0f6e79faead15b0e1338a32c414b851997edb716467e8c0bc9a10df423582')
+sha256sums=('e7dadfb7bd5474fd22409c1e5a67acdec19f77e597df68e17c5549bc1390d7fd'
+            '6dce369c3001d121404f88a2c5eac1ba01c46d7c70a1034ec53f1ff007ec7321'
+            '57f0f6e79faead15b0e1338a32c414b851997edb716467e8c0bc9a10df423582'
+            '6cf7f34df2d829008b6cc14dfcce70c0426f340fa9bcae93613f71c8c97aa2f5')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
   patch -Np1 -i "${srcdir}/no-explicit-lstdc++.patch"
+  patch -Np1 -i "${srcdir}/curses.patch"
   autoreconf -fiv
 }
 
@@ -56,6 +61,7 @@ build() {
     --enable-openmp
     --enable-xspice
     --enable-cider
+    --without-x
   )
 
   # FS#45230, create so lib
@@ -70,7 +76,7 @@ build() {
     --host=${MINGW_CHOST} \
     "${_common_flags[@]}" \
     --with-ngshared
-  make
+  make -j
 
   mkdir -p "${srcdir}/build-static-${MSYSTEM}" && cd "${srcdir}/build-static-${MSYSTEM}"
 
@@ -79,14 +85,14 @@ build() {
   ../${_realname}-${pkgver}/configure \
     "${_common_flags[@]}" \
     --with-wingui
-  make
+  make -j
 
   mkdir -p "${srcdir}/build-console-${MSYSTEM}" && cd "${srcdir}/build-console-${MSYSTEM}"
 
   LDFLAGS+=" -lgdi32"
   ../${_realname}-${pkgver}/configure \
-    "${_common_flags[@]}"
-  make
+    "${_common_flags[@]}" 
+  make -j
 }
 
 package() {
