--- a/mingw-w64-python-aiosqlite/PKGBUILD
+++ b/mingw-w64-python-aiosqlite/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=aiosqlite
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.20.0
-pkgrel=2
+pkgver=0.21.0
+pkgrel=1
 pkgdesc='asyncio bridge to the standard sqlite3 module (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/omnilib/aiosqlite'
+url='https://aiosqlite.omnilib.dev/'
+msys2_repository_url='https://github.com/omnilib/aiosqlite'
 msys2_references=(
   'pypi: aiosqlite'
 )
@@ -18,16 +19,11 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-flit-core")
-source=("${url}/archive/v${pkgver}/${_realname}-$pkgver.tar.gz")
-sha256sums=('63ecc7f7ffa0d0c2ba918b3c2bfe6f96b65fd7388b9041ae77b020ea8ff566db')
-
-prepare() {
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('131bb8056daa3bc875608c631c678cda73922a2d4ba8aec373b19f18c17e7aa3')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
