--- a/mingw-w64-python-jupyter-events/PKGBUILD
+++ b/mingw-w64-python-jupyter-events/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=jupyter-events
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.11.0
+pkgver=0.12.0
 pkgrel=1
 pkgdesc="Jupyter Event System library (mingw-w64)"
 arch=('any')
@@ -23,6 +23,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-rfc3339-validator"
          "${MINGW_PACKAGE_PREFIX}-python-rfc3986-validator"
          "${MINGW_PACKAGE_PREFIX}-python-rich"
+         "${MINGW_PACKAGE_PREFIX}-python-packaging"
          "${MINGW_PACKAGE_PREFIX}-python-traitlets"
          "${MINGW_PACKAGE_PREFIX}-python-yaml")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
@@ -31,7 +32,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=('c0bc56a37aac29c1fbc3bcfbddb8c8c49533f9cf11f1c4e6adadba936574ab90')
+sha256sums=('fc3fce98865f6784c9cd0a56a20644fc6098f21c8c33834a8d9fe383c17e554b')
 
 build() {
   cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
