python-mpi4py: update to 4.0.2

--- a/mingw-w64-python-mpi4py/PKGBUILD
+++ b/mingw-w64-python-mpi4py/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=mpi4py
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=4.0.1
-pkgrel=2
+pkgver=4.0.2
+pkgrel=1
 pkgdesc="Python bindings for the Message Passing Interface (MPI) standard (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -21,7 +21,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cython"
              "${MINGW_PACKAGE_PREFIX}-msmpi")
 source=("https://github.com/mpi4py/mpi4py/releases/download/${pkgver}/mpi4py-${pkgver}.tar.gz")
-sha256sums=('f3174b245775d556f4fddb32519a2066ef0592edc810c5b5a59238f9a0a40c89')
+sha256sums=('86085436d3ea3587323321b9e661e4df60eabbcf11c2c9cf63d0873ca111cc8b')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}/"
@@ -33,14 +33,10 @@ prepare() {
   sed -i 's@## libraries            = mpi@libraries            = msmpi@g' mpi.cfg
   sed -i 's@## library_dirs         = %(mpi_dir)s/lib@library_dirs         = %(mpi_dir)s/lib@g' mpi.cfg
   #sed -i 's@## runtime_library_dirs = %(mpi_dir)s/lib@runtime_library_dirs = %(mpi_dir)s/bin@g' mpi.cfg
-
-  cd "${srcdir}"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
-  cd "${srcdir}"/python-build-${MSYSTEM}
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --no-isolation
 }
 
