--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.171.6
+pkgver=0.172.8
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -19,14 +19,12 @@ msys2_references=(
   'gentoo: app-editors/zed'
 )
 depends=("${MINGW_PACKAGE_PREFIX}-libgit2"
-         "${MINGW_PACKAGE_PREFIX}-zstd"
-         "${MINGW_PACKAGE_PREFIX}-nodejs")
+         "${MINGW_PACKAGE_PREFIX}-nodejs"
+         "${MINGW_PACKAGE_PREFIX}-zstd")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-protobuf"
-             "${MINGW_PACKAGE_PREFIX}-fontconfig"
-             "${MINGW_PACKAGE_PREFIX}-openssl"
              #"${MINGW_PACKAGE_PREFIX}-sqlite3"
              "${MINGW_PACKAGE_PREFIX}-cargo-about"
              "${MINGW_PACKAGE_PREFIX}-lld"
@@ -43,13 +41,11 @@ source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
         "zed-dont-vendor-cargo-about.patch"
         "zed-set-rustflags.patch"
-        "https://github.com/zed-industries/zed/commit/0e0534831155cd22c1af226fc31f59c52248cb1b.patch"
         "zstd-sys-remove-statik.patch")
-sha256sums=('f40ffe43874d7f730b779263ceea0ba51f486907812e8eeee2738315f881b732'
+sha256sums=('e74d67a511508c6b4f99e82ab969bcac9ace45d2746ff0cd9b4d317009c6c685'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
             '86bad9a2bb0356bdd820a6ac73ec3f736f784b4d487af9a8f6bdc0c3e5b309d1'
-            '4ea7341ba0af09d225c888beeb77e2ed30fe2ac162e1800584a95eb074a0499d'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
 prepare() {
@@ -57,11 +53,6 @@ prepare() {
 
   rm rust-toolchain.toml
 
-  # https://github.com/zed-industries/zed/pull/22876
-  git cherry-pick -n d1be419fff415329b38f26aff90488700702c82a
-  # remove collab support to avoid webrtc compilation
-  # https://github.com/zed-industries/zed/pull/23518
-  patch -Np1 -i "../0e0534831155cd22c1af226fc31f59c52248cb1b.patch"
   # use system cargo about to generate license file
   patch -Np1 -i "../zed-dont-vendor-cargo-about.patch"
   # apply `-Cforce-frame-pointers=yes` in .cargo/config.toml instead of env var to apply other
