--- a/mingw-w64-python-cx-freeze/PKGBUILD
+++ b/mingw-w64-python-cx-freeze/PKGBUILD
@@ -23,7 +23,7 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
   "${MINGW_PACKAGE_PREFIX}-python-cx-logging"
 )
-if [ "${MINGW_ARCH}" != "clangarm64" ]; then
+if [ "${CARCH}" != "aarch64" ]; then
     depends+=("${MINGW_PACKAGE_PREFIX}-python-lief")
 fi
 makedepends=(
