python-maturin: update to 1.8.2

--- a/mingw-w64-python-maturin/PKGBUILD
+++ b/mingw-w64-python-maturin/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=maturin
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
-pkgver=1.8.1
+pkgver=1.8.2
 pkgrel=1
 pkgdesc='Build and publish crates with pyo3, rust-cpython and cffi bindings as well as rust binaries as python packages (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/pyo3/maturin'
+url='https://www.maturin.rs/'
+msys2_repository_url='https://github.com/pyo3/maturin'
 msys2_references=(
   'pypi: maturin'
 )
@@ -19,8 +20,8 @@ makedepends=(
     "${MINGW_PACKAGE_PREFIX}-python-installer"
     "${MINGW_PACKAGE_PREFIX}-python-setuptools-rust")
 options=('!strip')
-source=("https://pypi.io/packages/source/${_realname:0:1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('49cd964aabf59f8b0a6969f9860d2cdf194ac331529caae14c884f5659568857')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('e31abc70f6f93285d6e63d2f4459c079c94c259dd757370482d2d4ceb9ec1fa0')
 
 prepare() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
