pyqt6: update to 6.8.1

--- a/mingw-w64-pyqt6/PKGBUILD
+++ b/mingw-w64-pyqt6/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=pyqt6
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=6.8.0
+pkgver=6.8.1
 pkgrel=1
 pkgdesc="Python bindings for the Qt cross platform application toolkit (mingw-w64)"
 arch=('any')
@@ -25,6 +25,7 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-qt6-activeqt"
             "${MINGW_PACKAGE_PREFIX}-qt6-positioning"
             "${MINGW_PACKAGE_PREFIX}-qt6-quick3d"
             "${MINGW_PACKAGE_PREFIX}-qt6-remoteobjects"
+            "${MINGW_PACKAGE_PREFIX}-qt6-scxml"
             "${MINGW_PACKAGE_PREFIX}-qt6-sensors"
             "${MINGW_PACKAGE_PREFIX}-qt6-serialport"
             "${MINGW_PACKAGE_PREFIX}-qt6-shadertools"
@@ -45,6 +46,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt6-positioning"
              "${MINGW_PACKAGE_PREFIX}-qt6-quick3d"
              "${MINGW_PACKAGE_PREFIX}-qt6-remoteobjects"
+             "${MINGW_PACKAGE_PREFIX}-qt6-scxml"
              "${MINGW_PACKAGE_PREFIX}-qt6-sensors"
              "${MINGW_PACKAGE_PREFIX}-qt6-serialport"
              "${MINGW_PACKAGE_PREFIX}-qt6-shadertools"
@@ -53,8 +55,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt6-tools"
              "${MINGW_PACKAGE_PREFIX}-qt6-webchannel"
              "${MINGW_PACKAGE_PREFIX}-qt6-websockets")
-source=(https://pypi.python.org/packages/source/P/PyQt6/PyQt6-${pkgver}.tar.gz)
-sha256sums=('6d8628de4c2a050f0b74462e4c9cb97f839bf6ffabbca91711722ffb281570d9')
+source=(https://pypi.python.org/packages/source/P/PyQt6/pyqt6-${pkgver}.tar.gz)
+sha256sums=('91d937d6166274fafd70f4dee11a8da6dbfdb0da53de05f5d62361ddf775e256')
 
 prepare() {
   cd "${srcdir}"
@@ -81,7 +83,7 @@ build() {
     --qmake-setting "QMAKE_CXXFLAGS=${CXXFLAGS}" \
     --verbose
 
-    make -C build
+  make -C build
 }
 
 package(){
