[NFC] Replace tabs with spaces in PKGBUILDs.

--- a/mingw-w64-python-click-repl/PKGBUILD
+++ b/mingw-w64-python-click-repl/PKGBUILD
@@ -12,26 +12,24 @@ url='https://github.com/click-contrib/click-repl'
 msys2_references=(
   'pypi: click-repl'
 )
-license=("MIT")
-depends=("${MINGW_PACKAGE_PREFIX}-python-click"
+license=("spdx:MIT")
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-click"
          "${MINGW_PACKAGE_PREFIX}-python-prompt_toolkit")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
-	         "${MINGW_PACKAGE_PREFIX}-python-installer"
-	         "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=('!strip')
 source=("https://pypi.python.org/packages/source/${_realname:0:1}/$_realname/$_realname-$pkgver.tar.gz")
 sha256sums=('17849c23dba3d667247dc4defe1757fff98694e90fe37474f3feebb69ced26a9')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}"
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  msg "Python install for ${MSYSTEM}"
   cd "${srcdir}/python-build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
