--- a/mingw-w64-python-click-plugins/PKGBUILD
+++ b/mingw-w64-python-click-plugins/PKGBUILD
@@ -12,11 +12,12 @@ url='https://github.com/click-contrib/click-plugins'
 msys2_references=(
   'pypi: click-plugins'
 )
-license=("BSD")
-depends=("${MINGW_PACKAGE_PREFIX}-python-click")
+license=("spdx:BSD-3-Clause")
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-click")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
-	         "${MINGW_PACKAGE_PREFIX}-python-installer"
-	         "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-click"
               "${MINGW_PACKAGE_PREFIX}-python-pytest")
 options=('!strip')
