yazi: update to 25.2.7

--- a/mingw-w64-yazi/PKGBUILD
+++ b/mingw-w64-yazi/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=yazi
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.4.2
+pkgver=25.2.7
 pkgrel=1
 pkgdesc="Blazing fast terminal file manager written in Rust, based on async I/O (mingw-w64)"
 arch=('any')
@@ -20,7 +20,7 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-jq: for JSON preview"
             "${MINGW_PACKAGE_PREFIX}-zoxide: for directory jumping"
             "${MINGW_PACKAGE_PREFIX}-ttf-nerd-fonts-symbols: for file icons")
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}")
-sha256sums=('afafcb705d9b62699b60134a358a3897a3a00b330f52b0b78c64c0ee733389d8')
+sha256sums=('180854189e5b36f605d8b8b2f55f59927c643681909b34eb19c204ea7e9d61aa')
 
 _env() {
   export YAZI_GEN_COMPLETIONS=1
@@ -37,20 +37,20 @@ build() {
   cd "${_realname}"
 
   _env
-  cargo build --release --frozen -p yazi-fm -p yazi-cli
+  cargo build --profile release-windows --frozen -p yazi-fm -p yazi-cli
 }
 
 check() {
   cd "${_realname}"
 
   _env
-  cargo test --release --frozen -p yazi-fm -p yazi-cli
+  cargo test --profile release-windows --frozen -p yazi-fm -p yazi-cli
 }
 
 package() {
   cd "${_realname}"
 
-  install -Dm755 target/release/ya{,zi}.exe -t "${pkgdir}${MINGW_PREFIX}/bin"
+  install -Dm755 target/release-windows/ya{,zi}.exe -t "${pkgdir}${MINGW_PREFIX}/bin"
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 
   (cd "yazi-boot/completions"
