mingw-w64: Update to 9e8f2a7b5d

--- a/mingw-w64-libmangle-git/PKGBUILD
+++ b/mingw-w64-libmangle-git/PKGBUILD
@@ -5,9 +5,9 @@ pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=12.0.0.r480.gea22a99cb
+pkgver=12.0.0.r487.g9e8f2a7b5
 pkgrel=1
-_commit='ea22a99cb06640697c45657e17bd5cb9603e62d7'
+_commit='9e8f2a7b5d8b2d74cc93a752fcc7ca6af2c5afb9'
 pkgdesc="MinGW-w64 libmangle (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -23,7 +23,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "git")
 options=('!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('af6b9851bb46020185293452cccbd82d5b6c2ff1be536db80e02b15c97a3fb5d')
+sha256sums=('7986cc1e536f575df533268f03020de1a9b042961c5b1a5d61939ca3ffd29a11')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
