--- a/mingw-w64-headers-git/PKGBUILD
+++ b/mingw-w64-headers-git/PKGBUILD
@@ -4,9 +4,9 @@ _realname=headers
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 pkgdesc="MinGW-w64 headers for Windows (mingw-w64)"
-pkgver=12.0.0.r480.gea22a99cb
+pkgver=12.0.0.r487.g9e8f2a7b5
 pkgrel=1
-_commit='ea22a99cb06640697c45657e17bd5cb9603e62d7'
+_commit='9e8f2a7b5d8b2d74cc93a752fcc7ca6af2c5afb9'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.mingw-w64.org/"
@@ -21,7 +21,7 @@ conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 options=('!strip' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit"
         0001-remove-ireference-boolean.patch)
-sha256sums=('af6b9851bb46020185293452cccbd82d5b6c2ff1be536db80e02b15c97a3fb5d'
+sha256sums=('7986cc1e536f575df533268f03020de1a9b042961c5b1a5d61939ca3ffd29a11'
             'cad48616325b5e70afa4e02424021fc8d54e17dcbf86eae3df990d3500080236')
 
 pkgver() {
