--- a/mingw-w64-winpthreads-git/PKGBUILD
+++ b/mingw-w64-winpthreads-git/PKGBUILD
@@ -5,9 +5,9 @@
 _realname=winpthreads
 pkgbase=mingw-w64-${_realname}-git
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-git" "${MINGW_PACKAGE_PREFIX}-libwinpthread-git")
-pkgver=12.0.0.r480.gea22a99cb
+pkgver=12.0.0.r487.g9e8f2a7b5
 pkgrel=1
-_commit='ea22a99cb06640697c45657e17bd5cb9603e62d7'
+_commit='9e8f2a7b5d8b2d74cc93a752fcc7ca6af2c5afb9'
 pkgdesc="MinGW-w64 winpthreads library (mingw-w64)"
 url="https://www.mingw-w64.org/"
 msys2_repository_url="https://sourceforge.net/p/mingw-w64/mingw-w64/ci/master/tree/mingw-w64-libraries/winpthreads"
@@ -27,7 +27,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 options=('!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit"
         "0001-Define-__-de-register_frame_info-in-fake-libgcc_s.patch")
-sha256sums=('af6b9851bb46020185293452cccbd82d5b6c2ff1be536db80e02b15c97a3fb5d'
+sha256sums=('7986cc1e536f575df533268f03020de1a9b042961c5b1a5d61939ca3ffd29a11'
             '2e779bcc60a1422b23e0cfdb5c0f6851f2382592bb4675d08a6bdef78d5e5c10')
 
 pkgver() {
