netcdf: Fix CMake config file.
Fixes #23328

--- a/mingw-w64-netcdf/PKGBUILD
+++ b/mingw-w64-netcdf/PKGBUILD
@@ -4,7 +4,7 @@ _realname=netcdf
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=4.9.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Interface for scientific data access to large binary data (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,12 +18,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-curl"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-blosc"
-             "${MINGW_PACKAGE_PREFIX}-bzip2")
+             "${MINGW_PACKAGE_PREFIX}-blosc")
 optdepends=("${MINGW_PACKAGE_PREFIX}-netcdf-c++: C++ bindings"
             "${MINGW_PACKAGE_PREFIX}-netcdf-fortran: Fortran bindings"
-            "${MINGW_PACKAGE_PREFIX}-blosc: blosc and zstdfilters plugins"
-            "${MINGW_PACKAGE_PREFIX}-bzip2: bzip2 plugin")
+            "${MINGW_PACKAGE_PREFIX}-blosc: blosc and zstdfilters plugins")
 checkdepends=("unzip")
 source=("https://github.com/Unidata/netcdf-c/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         "0001-no-debug-libraries.patch")
@@ -107,9 +105,11 @@ build() {
 }
 
 check() {
-  cd "${srcdir}/build-static-${MSYSTEM}"
-  "${MINGW_PREFIX}"/bin/cmake.exe -DENABLE_TESTS=ON ../${_realname}-c-${pkgver}
+  cd "${srcdir}/build-shared-${MSYSTEM}"
+  "${MINGW_PREFIX}"/bin/cmake.exe -DNETCDF_ENABLE_TESTS=ON ../${_realname}-c-${pkgver}
   "${MINGW_PREFIX}"/bin/cmake.exe --build .
+
+  PATH="${srcdir}"/build-shared-${MSYSTEM}:$PATH \
   "${MINGW_PREFIX}"/bin/ctest
 }
 
@@ -122,13 +122,22 @@ package() {
     "${pkgdir}${MINGW_PREFIX}"/share/licenses/${_realname}/COPYRIGHT
 
   local PREFIX_WIN=$(cygpath -wm ${MINGW_PREFIX})
-  for _f in "${pkgdir}${MINGW_PREFIX}"/lib/cmake/netCDF/*.cmake; do
-    sed -e "s|${PREFIX_WIN}|\$\{_IMPORT_PREFIX\}|g" -i ${_f}
-  done
 
+  # Fix pkgconfig file
+  sed -e "s|${PREFIX_WIN}|${MINGW_PREFIX}|g" \
+    -i "${pkgdir}"${MINGW_PREFIX}/lib/pkgconfig/netcdf.pc
+  sed -e "1n;s|${MINGW_PREFIX}|\$\{prefix\}|g" \
+    -i "${pkgdir}"${MINGW_PREFIX}/lib/pkgconfig/netcdf.pc
+
+  # Fix CMake files
+  sed -e "s|${PREFIX_WIN}|${MINGW_PREFIX}|g" \
+    -i "${pkgdir}"${MINGW_PREFIX}/lib/cmake/netCDF/netCDFConfig.cmake
+  sed -e "s|${MINGW_PREFIX}|\$\{PACKAGE_PREFIX_DIR\}|g" \
+    -i "${pkgdir}"${MINGW_PREFIX}/lib/cmake/netCDF/netCDFConfig.cmake
+
+  # Remove source directory mention
   local SRCDIR_WIN=$(cygpath -wm "${srcdir}")
   for file in \
-    "${pkgdir}${MINGW_PREFIX}"/lib/pkgconfig/*.pc \
     "${pkgdir}${MINGW_PREFIX}/bin/nc-config" \
     "${pkgdir}${MINGW_PREFIX}/lib/libnetcdf.settings" \
     "${pkgdir}${MINGW_PREFIX}/lib/cmake/netCDF/netCDFConfig.cmake" \
