mopac: Fix package description.

--- a/mingw-w64-mopac/PKGBUILD
+++ b/mingw-w64-mopac/PKGBUILD
@@ -4,8 +4,8 @@ _realname=mopac
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=23.1.0
-pkgrel=1
-pkgdesc="Some package (mingw-w64)"
+pkgrel=2
+pkgdesc="Molecular Orbital PACkage. (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='http://openmopac.net'
