mapserver: update to 8.4.0

--- a/mingw-w64-mapserver/PKGBUILD
+++ b/mingw-w64-mapserver/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=MapServer
 pkgbase=mingw-w64-${_realname,,}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname,,}")
-pkgver=8.0.2
+pkgver=8.4.0
 _pkgver=rel-${pkgver//./-}
-pkgrel=4
+pkgrel=1
 pkgdesc='Platform for publishing spatial data and interactive mapping applications to the web (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -36,18 +36,21 @@ depends=("${MINGW_PACKAGE_PREFIX}-zlib"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-swig")
+options=('!strip')
 source=("https://github.com/MapServer/MapServer/archive/${_pkgver}/${_realname}-${_pkgver}.tar.gz"
         'https://ftp.gnu.org/old-gnu/regex/regex-0.12.tar.gz'
         '0001-mapserver-8.0.0-find-iconv.patch'
         '0004-mapserver-8.0.0-dest-relative.patch'
-        '5422e65ea8f7f7c3002a8031fae68d0b9aa5345a.patch')
-sha256sums=('17c72032ad6bc8786bfbdbdd514d4d21d587390128c368ab8d857217fa7bcf7a'
+        '0005-mapserver-8.4.0-dlfcn-win32.patch')
+sha256sums=('b99fbbb505e268393a980c46a49a41b5e32b38ee86040ede651ff7d96cd276c4'
             'f36e2d8d56bf15054a850128fcb2f51807706a92d3bb4b37ceadd731535ce230'
             '26a0503fe6fb02516910c624959c2de48d6574709e28d632fdf0177bad3edaf2'
             '6d66fbbdda99b7c794f5f7f9885a02f0727424a15774eeaf4d99a99876a85cbb'
-            '3e20039c16db2a0b29b8724b95e9b544a1f29aadd8a31921c4e69e60b2527725')
+            '37c5499e5b97e6e7abd493331553ac34a4ae8d977718701e93ea7ccad73be55b')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -62,10 +65,8 @@ prepare() {
 
   apply_patch_with_msg \
     0001-mapserver-8.0.0-find-iconv.patch \
-    0004-mapserver-8.0.0-dest-relative.patch
-
-  # https://github.com/MapServer/MapServer/pull/7144
-  patch -Np2 -i "${srcdir}/5422e65ea8f7f7c3002a8031fae68d0b9aa5345a.patch"
+    0004-mapserver-8.0.0-dest-relative.patch \
+    0005-mapserver-8.4.0-dlfcn-win32.patch
 }
 
 build() {
@@ -97,12 +98,20 @@ build() {
       ../${_realname}-${_pkgver}
 
   "${MINGW_PREFIX}"/bin/cmake.exe --build .
+
+  cd "${srcdir}/build-${MSYSTEM}/src/mapscript/python"
+
+  "${MINGW_PREFIX}"/bin/python.exe -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
 
   DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install .
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    "${MINGW_PREFIX}"/bin/python.exe -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" src/mapscript/python/dist/*.whl
 
   # Fix cmake files
   local PREFIX_WIN=$(cygpath -am ${MINGW_PREFIX})
@@ -111,7 +120,7 @@ package() {
   find "${pkgdir}${MINGW_PREFIX}/lib/cmake" -type f -name '*.cmake' \
       -exec sed -i -e "s|${MINGW_PREFIX}|\$\{MAPSERVER_CMAKE_DIR\}/../../..|g" {} \;
 
-  for _file in LICENSE.md flatgeobuf/LICENSE flatgeobuf/include/flatbuffers/LICENSE
+  for _file in LICENSE.md src/flatgeobuf/LICENSE src/flatgeobuf/include/flatbuffers/LICENSE
   do
     install -Dm644 "${srcdir}/${_realname}-${_pkgver}/${_file}" \
       "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname,,}/${_file}"
