--- a/mingw-w64-crystal/PKGBUILD
+++ b/mingw-w64-crystal/PKGBUILD
@@ -3,20 +3,15 @@
 _realname=crystal
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-_major=1
-_minor=15
-_patch=0
-_version="${_major}.${_minor}.${_patch}"
-_tag=${_version}
-pkgver=${_version}
+pkgver=1.15.0
 pkgrel=1
 pkgdesc="Fast and statically typed, compiled language with Ruby-like syntax (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'mingw64' 'clang64')
 url="https://crystal-lang.org/"
 msys2_repository_url="https://github.com/crystal-lang/crystal"
-msys2_documentation_url="https://crystal-lang.org/reference/${_major}.${_minor}/"
-msys2_changelog_url="https://github.com/crystal-lang/crystal/releases/tag/${_tag}"
+msys2_documentation_url="https://crystal-lang.org/reference/${pkgver%.*}/"
+msys2_changelog_url="https://github.com/crystal-lang/crystal/releases/tag/${pkgver}"
 msys2_references=(
   "archlinux: crystal"
 )
@@ -41,7 +36,7 @@ checkdepends=(
   "${MINGW_PACKAGE_PREFIX}-lld" # needed for linking std_spec
 )
 source=(
-  "$pkgname-$pkgver::git+${msys2_repository_url}.git#tag=${_version}"
+  "$pkgname-$pkgver::git+${msys2_repository_url}.git#tag=${pkgver}"
   https://github.com/crystal-lang/crystal/releases/download/1.15.0/crystal-1.15.0-windows-x86_64-gnu-unsupported.zip # stage 0 compiler
 )
 sha256sums=(
