--- a/mingw-w64-crystal/PKGBUILD
+++ b/mingw-w64-crystal/PKGBUILD
@@ -39,10 +39,8 @@ source=(
   "$pkgname-$pkgver::git+${msys2_repository_url}.git#tag=${pkgver}"
   https://github.com/crystal-lang/crystal/releases/download/1.15.0/crystal-1.15.0-windows-x86_64-gnu-unsupported.zip # stage 0 compiler
 )
-sha256sums=(
-  '6be663c5f0c9410696ed3fb5bd6006cafc2ab0bd0813651b62ca65982360f512'
-  '7d7df1b4a99cb3f938106ba45e0b55ce1d9913491999f1acaa57da168a18becb'
-)
+sha256sums=('626fed60399d7f1dc83e2e5a2ecde20d235e19a3dcf6d70d6f52ec4de063b32b'
+            '7d7df1b4a99cb3f938106ba45e0b55ce1d9913491999f1acaa57da168a18becb')
 
 prepare() {
   cd "$pkgname-$pkgver"
