--- a/mingw-w64-aom/PKGBUILD
+++ b/mingw-w64-aom/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=aom
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=3.11.0
+pkgver=3.12.0
 pkgrel=1
 pkgdesc='AV1 codec library (mingw-w64)'
 arch=('any')
@@ -23,13 +23,11 @@ makedepends=("perl"
              "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-python")
 source=("https://storage.googleapis.com/aom-releases/libaom-${pkgver}.tar.gz"{,.asc})
-sha256sums=('cf7d103d2798e512aca9c6e7353d7ebf8967ee96fffe9946e015bb9947903e3e'
+sha256sums=('d89daa160a0ea1409c4193be5b17c9591024c4f5a0e545dcb9d197535c66836e'
             'SKIP')
 validpgpkeys=('B002F08B74A148DAA01F7123A48E86DB0B830498') # AOMedia release signing key <av1-discuss@aomedia.org>
 
 build() {
-  mkdir -p "${srcdir}"/build-${MSYSTEM} && cd "${srcdir}"/build-${MSYSTEM}
-
   declare -a extra_config
   if check_option "debug" "n"; then
     extra_config+=("-DCMAKE_BUILD_TYPE=Release")
@@ -44,15 +42,14 @@ build() {
       "${extra_config[@]}" \
       -DBUILD_SHARED_LIBS=ON \
       -DENABLE_TESTS=OFF \
-      ../libaom-${pkgver}
+      -S "libaom-${pkgver}" \
+      -B "build-${MSYSTEM}"
 
-  ${MINGW_PREFIX}/bin/cmake --build .
+  ${MINGW_PREFIX}/bin/cmake --build "build-${MSYSTEM}"
 }
 
 package() {
-  cd "${srcdir}"/build-${MSYSTEM}
-
-  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install "build-${MSYSTEM}"
 
   install -Dm644 "${srcdir}"/libaom-${pkgver}/LICENSE "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
   install -Dm644 "${srcdir}"/libaom-${pkgver}/PATENTS "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/PATENTS
