libimagequant: drop mingw32
See https://github.com/msys2/MINGW-packages/issues/23346

--- a/mingw-w64-libimagequant/PKGBUILD
+++ b/mingw-w64-libimagequant/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=4.3.4
 pkgrel=1
 pkgdesc="Palette quantization library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/ImageOptim/libimagequant'
 msys2_references=(
   'purl: pkg:cargo/imagequant'
