libheif: build without rav1e on mingw32

--- a/mingw-w64-libheif/PKGBUILD
+++ b/mingw-w64-libheif/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libheif
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=1.19.5
-pkgrel=3
+pkgrel=4
 pkgdesc="HEIF image decoder/encoder library and tools (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -29,11 +29,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libsharpyuv"
          "${MINGW_PACKAGE_PREFIX}-openh264"
          "${MINGW_PACKAGE_PREFIX}-openjpeg2"
-         $( [[ ${CARCH} == i686 ]] || \
-            echo "${MINGW_PACKAGE_PREFIX}-openjph" )
-         "${MINGW_PACKAGE_PREFIX}-rav1e"
-         $( [[ ${CARCH} == i686 ]] || \
-            echo "${MINGW_PACKAGE_PREFIX}-svt-av1" )
+         $([[ ${CARCH} == i686 ]] || echo \
+            "${MINGW_PACKAGE_PREFIX}-openjph" \
+            "${MINGW_PACKAGE_PREFIX}-rav1e" \
+            "${MINGW_PACKAGE_PREFIX}-svt-av1" )
          "${MINGW_PACKAGE_PREFIX}-x265"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 source=("https://github.com/strukturag/libheif/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz")
@@ -49,6 +48,12 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
+  if [[ ${CARCH} == i686 ]]; then
+    extra_config+=("-DWITH_OPENJPH_ENCODER=OFF" "-DWITH_RAV1E=OFF" "-DWITH_SvtEnc=OFF")
+  else
+    extra_config+=("-DWITH_OPENJPH_ENCODER=ON" "-DWITH_RAV1E=ON" "-DWITH_SvtEnc=ON")
+  fi
+
   # Keep "-DX265_API_IMPORTS" flag due to https://github.com/strukturag/libheif/issues/357
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
     ${MINGW_PREFIX}/bin/cmake \
@@ -61,15 +66,8 @@ build() {
       -DWITH_HEADER_COMPRESSION=ON \
       -DWITH_KVAZAAR=ON \
       -DWITH_DAV1D=ON \
-      -DWITH_RAV1E=ON \
-      -DWITH_SvtEnc=$( [[ ${CARCH} == i686 ]] &&
-                        echo "OFF" || echo "ON" ) \
       -DWITH_JPEG_DECODER=ON \
-      -DWITH_JPEG_ENCODER=ON \
       -DWITH_OpenJPEG_DECODER=ON \
-      -DWITH_OpenJPEG_ENCODER=ON \
-      -DWITH_OPENJPH_ENCODER=$( [[ ${CARCH} == i686 ]] &&
-                        echo "OFF" || echo "ON" ) \
       -DX265_CFLAGS="-DX265_API_IMPORTS" \
       ../${_realname}-${pkgver}
 
