libavif: build without rav1e on mingw32

--- a/mingw-w64-libavif/PKGBUILD
+++ b/mingw-w64-libavif/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libavif
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.1.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Library for encoding and decoding .avif files (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,9 +12,9 @@ url="https://github.com/AOMediaCodec/libavif"
 license=('spdx:BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-aom"
          "${MINGW_PACKAGE_PREFIX}-dav1d"
-         "${MINGW_PACKAGE_PREFIX}-rav1e"
-         $( [[ ${CARCH} == i686 ]] || \
-            echo "${MINGW_PACKAGE_PREFIX}-svt-av1" )
+         $([[ ${CARCH} == i686 ]] || echo \
+           "${MINGW_PACKAGE_PREFIX}-rav1e" \
+           "${MINGW_PACKAGE_PREFIX}-svt-av1" )
          "${MINGW_PACKAGE_PREFIX}-libyuv"
          "${MINGW_PACKAGE_PREFIX}-libjpeg-turbo"
          "${MINGW_PACKAGE_PREFIX}-libpng"
@@ -41,6 +41,12 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
+  if [[ ${CARCH} == i686 ]]; then
+    extra_config+=("-DAVIF_CODEC_RAV1E=OFF" "-DAVIF_CODEC_SVT=OFF")
+  else
+    extra_config+=("-DAVIF_CODEC_RAV1E=SYSTEM" "-DAVIF_CODEC_SVT=SYSTEM")
+  fi
+
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake \
     -G Ninja \
@@ -49,9 +55,6 @@ build() {
     "${extra_config[@]}" \
     -DAVIF_CODEC_AOM=SYSTEM \
     -DAVIF_CODEC_DAV1D=SYSTEM \
-    -DAVIF_CODEC_RAV1E=SYSTEM \
-    -DAVIF_CODEC_SVT=$( [[ ${CARCH} == i686 ]] &&
-                        echo "OFF" || echo "SYSTEM" ) \
     -DAVIF_LIBSHARPYUV=SYSTEM \
     -S "${_realname}-${pkgver}" \
     -B "build-${MSYSTEM}-static"
@@ -68,9 +71,6 @@ build() {
     -DAVIF_BUILD_APPS=ON \
     -DAVIF_CODEC_AOM=SYSTEM \
     -DAVIF_CODEC_DAV1D=SYSTEM \
-    -DAVIF_CODEC_RAV1E=SYSTEM \
-    -DAVIF_CODEC_SVT=$( [[ ${CARCH} == i686 ]] &&
-                        echo "OFF" || echo "SYSTEM" ) \
     -DAVIF_BUILD_GDK_PIXBUF=ON \
     -DAVIF_LIBSHARPYUV=SYSTEM \
     -S "${_realname}-${pkgver}" \
@@ -90,6 +90,8 @@ package() {
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install "build-${MSYSTEM}-static"
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install "build-${MSYSTEM}-shared"
 
-  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/README.md "${pkgdir}"${MINGW_PREFIX}/share/doc/${_realname}/README.md
-  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/LICENSE "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/README.md \
+    "${pkgdir}"${MINGW_PREFIX}/share/doc/${_realname}/README.md
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/LICENSE \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
