rav1e: drop mingw32

--- a/mingw-w64-rav1e/PKGBUILD
+++ b/mingw-w64-rav1e/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.7.1
 pkgrel=6
 pkgdesc='An AV1 encoder focused on speed and safety (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: rav1e'
   'purl: pkg:cargo/rav1e'
