libheif: Restore JPEG/OpenJPEG ENCODERs

--- a/mingw-w64-libheif/PKGBUILD
+++ b/mingw-w64-libheif/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libheif
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=1.19.5
-pkgrel=4
+pkgrel=5
 pkgdesc="HEIF image decoder/encoder library and tools (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -67,7 +67,9 @@ build() {
       -DWITH_KVAZAAR=ON \
       -DWITH_DAV1D=ON \
       -DWITH_JPEG_DECODER=ON \
+      -DWITH_JPEG_ENCODER=ON \
       -DWITH_OpenJPEG_DECODER=ON \
+      -DWITH_OpenJPEG_ENCODER=ON \
       -DX265_CFLAGS="-DX265_API_IMPORTS" \
       ../${_realname}-${pkgver}
 
